# chinese-legal-text-redactor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/cn_legal_redactor/: __init__.py  cli.py  redactor.py
tests/: test_redactor.py
