[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-legal-text-redactor"
version = "0.1.0"
description = "Offline redaction of common personal identifiers in Chinese legal text"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Chinese Legal Text Redactor contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]

[project.scripts]
cn-legal-redactor = "cn_legal_redactor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
